--- a/apbd_03/appsettings.json
+++ b/apbd_03/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    
+    "DefaultConnection": "Server=localhost,1433;Database=APBD"
+  },
   "AllowedHosts": "*"
 }
