--- a/apbd_03/appsettings.json
+++ b/apbd_03/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    
-    "DefaultConnection": "Server=localhost,1433;Database=APBD"
+    "localhostMSSQLServer": "Server=localhost,1433;Database=APBD"
   },
   "AllowedHosts": "*"
 }
